Fix image width on Safari

--- a/src/pages/menu/index.css
+++ b/src/pages/menu/index.css
@@ -19,7 +19,7 @@
         background-color: var(--grey);
   
         & .menu__item-image {
-          width: 100%;
+          max-width: 100%;
           vertical-align: middle;
         }
       }
